--- a/index.html
+++ b/index.html
@@ -1,39 +1,24 @@
+<!--HTML-->
+<html>
+  <head>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>my-family-chart</title>
-  <script src="https://unpkg.com/d3@7"></script>
-  <script type="module" src="https://unpkg.com/family-chart@0.8.0-beta.2"></script>
-  <link rel="stylesheet" href="https://unpkg.com/family-chart@0.8.0-beta.2/dist/styles/family-chart.css">
-</head>
-<body>
-<div id="FamilyChart" class="f3" style="width:100%;height:900px;margin:auto;background-color:rgb(33,33,33);color:#fff;"></div>
-<script type="module">
+  </head>
+  <body>
+    <script src="./familytree.js"></script> 
+    <script>
+      let family = new FamilyTree("#tree", {
+          // オプション
+          nodeBinding: {
+              field_0: "name"
+          },
+          nodes: [
+              { id: 1, pids: [2], name: "Amber McKenzie", gender: "female" },
+              { id: 2, pids: [1], name: "Ava Field", gender: "male" },
+              { id: 3, mid: 1, fid: 2, name: "Peter Stevens", gender: "male" }
+          ]
+      });
+    </script>
 
-fetch('./data.json')
-  .then(res => res.json())
-  .then(data => create(data))
-  .catch(err => console.error(err))
-
-function create(data) {
-  const f3Chart = f3.createChart('#FamilyChart', data)
-    .setTransitionTime(1000)
-    .setCardXSpacing(250)
-    .setCardYSpacing(150)
-
-  f3Chart.setCard(f3.CardHtml)
-    .setOnCardUpdate(function(d) {
-      const card_label = this.querySelector('.card-label')
-      card_label.innerHTML = `${d.data.data["first name"]}<br><span style="font-size: 10px;">${d.data.id}</span>`
-    })
-
-  f3Chart.updateTree({initial: true})
-}
-
-</script>
-
-</body>
+    <div id="tree"></div>
+  </body>
 </html>
