[fix]読み込み後に実行されるようにした

--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
               { id: 3, mid: 1, fid: 2, name: "Peter Stevens", gender: "male" }
           ]
       });
+        // DOMが読み込まれた後に実行
+        document.addEventListener('DOMContentLoaded', function() {
+            const nodes = convertToFamilyTreeFormat(familyData);
+            
+            const family = new FamilyTree("#tree", {
+                nodeBinding: {
+                    field_0: "name",
+                    field_1: "birthday"
+                },
+                nodes: [
+                    { id: 1, pids: [2], name: "Amber McKenzie", gender: "female" },
+                    { id: 2, pids: [1], name: "Ava Field", gender: "male" },
+                    { id: 3, mid: 1, fid: 2, name: "Peter Stevens", gender: "male" }
+                ]
+            });
+        });
     </script>
   </head>
   <body>
