--- a/index.html
+++ b/index.html
@@ -1,24 +1,38 @@
-<!--HTML-->
-<html>
-  <head>
-    <div id="tree"></div>
-    <script src="./familytree.js"></script> 
-    <script>
-      let family = new FamilyTree("#tree", {
-          // オプション
-          nodeBinding: {
-              field_0: "name"
-          },
-          nodes: [
-              { id: 1, pids: [2], name: "Amber McKenzie", gender: "female" },
-              { id: 2, pids: [1], name: "Ava Field", gender: "male" },
-              { id: 3, mid: 1, fid: 2, name: "Peter Stevens", gender: "male" }
-          ]
-      });
-    </script>
-
-  </head>
-  <body>
-
-  </body>
-</html>
+<script src="./familytree.js"></script> 
+<div id="tree"></div>
+<script>
+  let family = new FamilyTree("#tree", {
+      // オプション
+      nodeBinding: {
+          field_0: "name",
+          field_1: "born",
+          photo: "photo"
+      },
+      editForm: {
+        titleBinding: "name",
+        photoBinding: "photo",
+        addMoreBtn: 'Add element',
+        addMore: 'Add more elements',
+        addMoreFieldName: 'Element name',
+        generateElementsFromFields: false,
+        elements: [
+            { type: 'textbox', label: 'Full Name', binding: 'name' },
+            { type: 'textbox', label: 'Email Address', binding: 'email' },
+            [
+                { type: 'textbox', label: 'Phone', binding: 'phone' },
+                { type: 'date', label: 'Date Of Birth', binding: 'born' }
+            ],
+            [
+                { type: 'select', options: [{ value: 'bg', text: 'Bulgaria' }, { value: 'ru', text: 'Russia' }, { value: 'gr', text: 'Greece' }], label: 'Country', binding: 'country' },
+                { type: 'textbox', label: 'City', binding: 'city' },
+            ],
+            { type: 'textbox', label: 'Photo Url', binding: 'photo', btn: 'Upload' },
+        ]
+      },
+      nodes: [
+          { id: 1, pids: [2], name: "つくし", gender: "female", born: "2020/09/03", photo:""},
+          { id: 2, pids: [1], name: "ライト", gender: "male", born: "2021/05/14" , photo:""},
+          { id: 3, mid: 1, fid: 2, name: "スミレ", gender: "female", born: "2024/09/11" , photo:""}
+      ]
+  });
+</script>
