[update]場所を追加

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ var chart = new FamilyTree(document.getElementById("tree"), {
     nodeBinding: {
         field_0: "name",
         field_1: "born",
+        field_2: "locate",
         img_0: "img",
     }
 });
