--- a/index.html
+++ b/index.html
@@ -1,33 +1,11 @@
-<script src="./familytree.js"></script> 
-<script src="./data.js"></script> 
-<div id="tree"></div>
-<script>
-var options = getOptions();
-
-var chart = new FamilyTree(document.getElementById("tree"), {
-    mouseScrool: FamilyTree.none,
-    scaleInitial: options.scaleInitial,
-    siblingSeparation: 120,
-    template: 'john',
-    nodeBinding: {
-        field_0: "name",
-        field_1: "born",
-        img_0: "img",
-        field_2: "locate",
-    }
-});
-
-chart.load(window.familyData);
-
-function getOptions(){
-  const searchParams = new URLSearchParams(window.location.search);
-  var fit = searchParams.get('fit');
-  var enableSearch = true;
-  var scaleInitial = 1;
-  if (fit == 'yes'){
-    enableSearch = false;
-    scaleInitial = FamilyTree.match.boundary;
-  }
-  return {enableSearch, scaleInitial};
-}
-</script>
+<html>
+  <head>
+    <title>日本のコアラ家系図</title>
+  </head>
+  <body>
+    <ul>
+      <li><a href="./v1.html">version1</a>(公開ライブラリ版, ♣を押すと展開)</li>
+      <li><a href="./vls.html">version2</a>(vls利用版、重いかも)</li>
+    </ul>
+  </body>
+</html>
